2000-06-09  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Use `@option' for options, not `@samp' nor
	`@code'.
	* doc/install.texi: Likewise.

2000-06-09  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Don't require AC_CYGWIN.
	(AC_F77_NAME_MANGLING): Removed useless comment.
	(_AC_PROG_F77_GNU): Use `.f' not `.fpp' which is not properly
	processed by Abysoft's Fortran compiler.

2000-06-09  Steven G. Johnson  <stevenj@superjdj.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Fixed bug where
	compiler output to stdout was not caught and interpreted.

2000-06-09  Akim Demaille  <akim@epita.fr>

	`autoconf --trace' dies on filenames with `:'.
	Reported by Mark Elbrecht.

	* autoconf.sh <trace> (trace2m4.sed): Use `..*' instead of
	`[^:][^:]*' to catch file names.  The rest of regex is probably
	precise enough to avoid incorrect parsing.

2000-06-09  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_SYS_LARGEFILE_MACRO_VALUE): Always initialize
	$3 to no

2000-06-08  Paul Eggert  <eggert@twinsun.com>

	Import AC_SYS_LARGEFILE from largefile.m4 serial 12.

	* acspecific.m4 (AC_SYS_LARGEFILE, _AC_SYS_LARGEFILE_MACRO_VALUE,
	_AC_SYS_LARGEFILE_SOURCE): New.
	* doc/autoconf.texi (System Services): Document AC_SYS_LARGEFILE.

2000-06-08  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Don't override FLIBS if
	specified by the user.
	Fix a bug: use the cached value to set FLIBS.

2000-06-07  Dave Love  <fx@gnu.org>

	* aclang.m4 (AC_PROG_F77): Check for f95 and fc too.

2000-06-07  Philippe De Muyter  <phdm@macqel.be>

	`foo=1 foo=2 cmd' has an undefined behavior.

	* acgeneral.m4 (_AC_COMPUTE_INT_COMPILE): Do not put two shell
	variable assignments in one shell command.
	* doc/autoconf.texi (Shell Substitutions): Document.

2000-06-07  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Fix problem on Cray due to