@@ -1,8 +1,11 @@
+2000-06-09  Akim Demaille  <akim@epita.fr>
+
+	* acgeneral.m4 (AC_CHECK_TOOLS): Rewrite.
+
 2000-06-09  Paul Eggert  <eggert@twinsun.com>
 
 	* doc/autoconf.texi: Use `@option' for options, not `@samp' nor
-	`@code'.
-	* doc/install.texi: Likewise.
+	`@code'.  * doc/install.texi: Likewise.
 
 2000-06-09  Akim Demaille  <akim@epita.fr>
 
